# SWE-agent

./: .gitignore  difficulty_mappings.json  instances.json  pyproject.toml  release_dockerhub.sh  requirements.txt
config/: default.yaml  default_anthropic.yaml
preds/: anthropic__claude-3-7-sonnet-20250219_preds.json  gemini-2.5-pro.db07fea4-c2d0-4186-b3e8-138bb13ce569.json  grok-3-beta-run.grok-3-beta.json  grok-3-beta-run_preds.json  grok-3-beta_preds.json  grok_3_beta_run_preds.json
preds/logs/run_evaluation/db07fea4-c2d0-4186-b3e8-138bb13ce569/gemini-2.5-pro/astropy__astropy-12907/: patch.diff  test_output.txt
preds/logs/run_evaluation/db07fea4-c2d0-4186-b3e8-138bb13ce569/gemini-2.5-pro/astropy__astropy-13033/: patch.diff  test_output.txt
preds/logs/run_evaluation/db07fea4-c2d0-4186-b3e8-138bb13ce569/gemini-2.5-pro/astropy__astropy-13236/: patch.diff  test_output.txt
preds/logs/run_evaluation/db07fea4-c2d0-4186-b3e8-138bb13ce569/gemini-2.5-pro/astropy__astropy-13398/: patch.diff  test_output.txt
preds/logs/run_evaluation/db07fea4-c2d0-4186-b3e8-138bb13ce569/gemini-2.5-pro/astropy__astropy-13453/: patch.diff  test_output.txt
sweagent/: exceptions.py  types.py
sweagent/agent/: __init__.py  agents.py  models.py
sweagent/agent/hooks/: abstract.py
sweagent/agent/providers/: __init__.py  litellm.py  openai.py  together.py
sweagent/api/: requirements.txt
sweagent/run/: aggregate_stats.py  batch_instances.py  merge_predictions.py  run.py  run_batch.py
sweagent/utils/: groupings.py
(+1595 files in other folders)
