[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweagent"
version = "1.0.0"
description = "SWE-agent: Agent-Computer Interfaces Enable Automated Software Engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sweagent = "sweagent.run.run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sweagent*"]

[tool.pyright]
ignore = ["**"]
